--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "serve-favicon": "~2.4.5"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.9.0",
+    "serve-favicon": "~2.4.5",
+	"babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.5.0",
     "nodemon": "^1.9.2"
+  },
+  "devDependencies": { 
   }
 }
