--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets env,stage-0\"",
-    "build": "./node_modules/babel-cli/bin/babel src -s -D -d dist --presets env,stage-0",
+    "build": "babel src -s -D -d dist --presets env,stage-0",
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,17 +18,19 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.13.3",
+    "flash-store": "^0.1.5",
     "moment": "^2.19.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "serve-favicon": "~2.4.5",
-	"babel-cli": "^6.9.0",
+    "node-resemble-js": "^0.2.0",
+    "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.5.0",
     "nodemon": "^1.9.2"
-  },
-  "devDependencies": { 
   }
 }
